--- a/index.html
+++ b/index.html
@@ -4,10 +4,15 @@
     <head>
         <meta charset="UTF-8">
         <title>Rock-Paper-Scissors</title>
-        <script src="javaScript.js"></script>
+        <link rel="stylesheet" href="style.css">
+        <script src="javaScript.js" defer></script>
     </head>
 
     <body>
-
+        <div class="buttons">
+            <button id="rock">Rock</button>
+            <button id="paper">Paper</button>
+            <button id="scissors">Scissors</button>
+        </div>
     </body>
 </html>
