--- a/index.html
+++ b/index.html
@@ -14,5 +14,7 @@
             <button id="paper">Paper</button>
             <button id="scissors">Scissors</button>
         </div>
+
+        <div class="results"></div>
     </body>
 </html>
