--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
             <button id="scissors">Scissors</button>
         </div>
 
-        <div class="results"></div>
+        <div class="results">
+            <div class="movesContainer"></div>
+            <div class="scoresContainer"></div>
+        </div>
     </body>
 </html>
