Added container for gameStatus

--- a/index.html
+++ b/index.html
@@ -19,5 +19,7 @@
             <div class="movesContainer"></div>
             <div class="scoresContainer"></div>
         </div>
+
+        <div class="gameStatusContainer"></div>
     </body>
 </html>
