--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     </head>
 
     <body>
+        <h3>Rock - Paper - Scissors</h3>
+        <p>Choose your Move</p>
         <div class="buttons">
             <button id="rock">Rock</button>
             <button id="paper">Paper</button>
